name:                phixpoint
version:             0.1.0.0
synopsis:            A library for computing fixpoints
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
-- copyright:           
category:            Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules: Phixpoint.Domain
                   Phixpoint.FlowGraph
                   Phixpoint.Iteration
                   Phixpoint.Worklist
  other-modules: Data.Vector.Resizable
  -- other-extensions:    
  build-depends:       base == 4.*,
                       containers,
                       vector
  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options: -Wall